--- a/public/acceptable-use.html
+++ b/public/acceptable-use.html
@@ -2,12 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Acceptable Use Policy | MVP HOUSE LTD</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Acceptable Use Policy (AUP) | MVP HOUSE LTD</title>
     <meta
       name="description"
-      content="Acceptable Use Policy for MVP HOUSE LTD. Rules for legal, safe, and responsible use of SaaS, micro-SaaS, and AI-powered services."
+      content="Rules for legal, safe, and responsible use of MVP HOUSE LTD SaaS and AI-powered services. Learn prohibited behaviors, spam rules, API abuse, and security restrictions."
     />
+    <link rel="canonical" href="https://mvphouse.app/acceptable-use.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Acceptable Use Policy" />
+    <meta
+      property="og:description"
+      content="Detailed AUP governing safe and compliant use of MVP HOUSE LTD services."
+    />
+    <meta property="og:url" content="https://mvphouse.app/acceptable-use.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Acceptable Use Policy (AUP) | MVP HOUSE LTD" />
+    <meta
+      name="twitter:description"
+      content="Rules for legal, safe, and responsible use of MVP HOUSE LTD SaaS and AI-powered services."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1>Acceptable Use Policy</h1>
