--- a/public/ai-policy.html
+++ b/public/ai-policy.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <title>AI Use &amp; Disclosure Policy | MVP HOUSE LTD</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="AI Use & Disclosure Policy for MVP HOUSE LTD, explaining how AI is used, its limitations, and user responsibilities when relying on AI-generated outputs."
+      content="AI limitations, disclaimers, accuracy warnings, human oversight guidelines, and disclosure requirements for AI-generated content."
     />
+    <link rel="canonical" href="https://mvphouse.app/ai-policy.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="AI Use &amp; Disclosure Policy" />
+    <meta
+      property="og:description"
+      content="How MVP HOUSE LTD uses AI, its limitations, and your responsibilities when using AI outputs."
+    />
+    <meta property="og:url" content="https://mvphouse.app/ai-policy.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AI Use &amp; Disclosure Policy | MVP HOUSE LTD" />
+    <meta
+      name="twitter:description"
+      content="AI limitations, disclaimers, accuracy warnings, human oversight guidelines, and disclosure requirements for AI-generated content."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1>AI Use &amp; Disclosure Policy</h1>
