--- a/public/cookies.html
+++ b/public/cookies.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <title>Cookie Policy | MVP HOUSE LTD</title>
+    <meta
+      name="description"
+      content="Information about how MVP HOUSE LTD uses cookies, analytics tools, and tracking technologies across our SaaS platforms."
+    />
+    <link rel="canonical" href="https://mvphouse.app/cookies.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Cookie Policy" />
+    <meta
+      property="og:description"
+      content="Learn how cookies and analytics tools are used to deliver a secure and optimized experience."
+    />
+    <meta property="og:url" content="https://mvphouse.app/cookies.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cookie Policy" />
+    <meta
+      name="twitter:description"
+      content="Learn how cookies and analytics tools are used to deliver a secure and optimized experience."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
