--- a/public/dmca.html
+++ b/public/dmca.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <title>Copyright &amp; DMCA Policy | MVP HOUSE LTD</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Copyright & DMCA Policy for MVP HOUSE LTD, covering intellectual property, user content, AI outputs, and takedown procedures."
+      content="How to report copyright infringement, DMCA takedown instructions, AI output rights, and user-generated content rules."
     />
+    <link rel="canonical" href="https://mvphouse.app/dmca.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Copyright &amp; DMCA Policy" />
+    <meta
+      property="og:description"
+      content="Official DMCA and copyright rules covering user content, AI content, and infringement procedures."
+    />
+    <meta property="og:url" content="https://mvphouse.app/dmca.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Copyright &amp; DMCA Policy | MVP HOUSE LTD" />
+    <meta
+      name="twitter:description"
+      content="How to report copyright infringement, DMCA takedown instructions, AI output rights, and user-generated content rules."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1>Copyright &amp; DMCA Policy</h1>
