--- a/public/dpa.html
+++ b/public/dpa.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <title>Data Processing Agreement (DPA) | MVP HOUSE LTD</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Data Processing Agreement (DPA) between MVP HOUSE LTD and its customers, compliant with UK GDPR and EU GDPR."
+      content="GDPR-compliant Data Processing Agreement specifying roles, obligations, data categories, subprocessors, and legal safeguards."
     />
+    <link rel="canonical" href="https://mvphouse.app/dpa.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Data Processing Agreement (DPA)" />
+    <meta
+      property="og:description"
+      content="Full GDPR and UK GDPR compliant DPA for enterprise and B2B customers."
+    />
+    <meta property="og:url" content="https://mvphouse.app/dpa.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Data Processing Agreement (DPA) | MVP HOUSE LTD" />
+    <meta
+      name="twitter:description"
+      content="GDPR-compliant Data Processing Agreement specifying roles, obligations, data categories, subprocessors, and legal safeguards."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1>Data Processing Agreement (DPA)</h1>
