--- a/public/privacy.html
+++ b/public/privacy.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <title>Privacy Policy | MVP HOUSE LTD</title>
+    <meta
+      name="description"
+      content="Learn how MVP HOUSE LTD collects, processes, stores, and protects personal data under UK GDPR and global privacy standards."
+    />
+    <link rel="canonical" href="https://mvphouse.app/privacy.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Privacy Policy | MVP HOUSE LTD" />
+    <meta
+      property="og:description"
+      content="Full details on data protection, GDPR compliance, cookies, AI data processing, and your privacy rights."
+    />
+    <meta property="og:url" content="https://mvphouse.app/privacy.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Privacy Policy | MVP HOUSE LTD" />
+    <meta
+      name="twitter:description"
+      content="Review how we handle privacy, data usage, cookies, and GDPR obligations."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
