--- a/public/refund-policy.html
+++ b/public/refund-policy.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <title>Refund &amp; Cancellation Policy | MVP HOUSE LTD</title>
+    <meta
+      name="description"
+      content="Refund, cancellation, and renewal rules for MVP HOUSE LTD’s SaaS and digital products. Clear and transparent Stripe-compliant policy."
+    />
+    <link rel="canonical" href="https://mvphouse.app/refund-policy.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Refund &amp; Cancellation Policy" />
+    <meta
+      property="og:description"
+      content="Transparent Stripe-compliant refund and cancellation rules for all MVP HOUSE LTD digital products and subscriptions."
+    />
+    <meta property="og:url" content="https://mvphouse.app/refund-policy.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Refund &amp; Cancellation Policy" />
+    <meta
+      name="twitter:description"
+      content="Refund, cancellation, and billing rules for MVP HOUSE LTD subscriptions."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
