--- a/public/subprocessors.html
+++ b/public/subprocessors.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <title>Subprocessors | MVP HOUSE LTD</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="List of third-party subprocessors used by MVP HOUSE LTD for hosting, analytics, AI processing, payments, and service delivery."
+      content="Transparent list of third-party subprocessors used for hosting, AI processing, analytics, payments, and security."
     />
+    <link rel="canonical" href="https://mvphouse.app/subprocessors.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Subprocessors" />
+    <meta
+      property="og:description"
+      content="See all approved infrastructure, AI, analytics, and security subprocessors."
+    />
+    <meta property="og:url" content="https://mvphouse.app/subprocessors.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Subprocessors | MVP HOUSE LTD" />
+    <meta
+      name="twitter:description"
+      content="Transparent list of third-party subprocessors used for hosting, AI processing, analytics, payments, and security."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1>Subprocessors</h1>
