--- a/public/terms.html
+++ b/public/terms.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <title>Terms &amp; Conditions | MVP HOUSE LTD</title>
+    <meta
+      name="description"
+      content="Read the official Terms & Conditions for all MVP HOUSE LTD SaaS and micro-SaaS products. Learn about user rights, billing rules, legal obligations, and service usage policies."
+    />
+    <link rel="canonical" href="https://mvphouse.app/terms.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Terms &amp; Conditions | MVP HOUSE LTD" />
+    <meta
+      property="og:description"
+      content="Official Terms & Conditions governing the use of MVP HOUSE LTD’s digital products, subscriptions, AI tools, and services."
+    />
+    <meta property="og:url" content="https://mvphouse.app/terms.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Terms &amp; Conditions | MVP HOUSE LTD" />
+    <meta
+      name="twitter:description"
+      content="Review the Terms & Conditions for using MVP HOUSE LTD SaaS products and AI tools."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
