--- a/public/billing.html
+++ b/public/billing.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <title>Billing &amp; Subscription Policy | MVP HOUSE LTD</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Billing and subscription terms for MVP HOUSE LTD's SaaS and micro-SaaS products. Learn about renewals, cancellations, free trials and Stripe billing."
+      content="Full details on billing cycles, auto-renewals, pricing changes, failed payments, free trials, and Stripe billing governance."
     />
+    <link rel="canonical" href="https://mvphouse.app/billing.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Billing &amp; Subscription Policy" />
+    <meta
+      property="og:description"
+      content="All subscription, renewal, and payment rules for MVP HOUSE LTD SaaS products."
+    />
+    <meta property="og:url" content="https://mvphouse.app/billing.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Billing &amp; Subscription Policy" />
+    <meta
+      name="twitter:description"
+      content="All subscription, renewal, and payment rules for MVP HOUSE LTD SaaS products."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1>Billing &amp; Subscription Policy</h1>
