--- a/public/fair-use.html
+++ b/public/fair-use.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <title>Fair Use Policy | MVP HOUSE LTD</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Fair Use Policy for MVP HOUSE LTD services, describing responsible and non-abusive use of SaaS, micro-SaaS, and AI-powered products."
+      content="Usage limits and rules designed to prevent abuse and ensure stable, fair access to SaaS and AI tools."
     />
+    <link rel="canonical" href="https://mvphouse.app/fair-use.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Fair Use Policy" />
+    <meta
+      property="og:description"
+      content="Learn the usage limitations and rules that keep MVP HOUSE LTD services fast and stable."
+    />
+    <meta property="og:url" content="https://mvphouse.app/fair-use.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Fair Use Policy | MVP HOUSE LTD" />
+    <meta
+      name="twitter:description"
+      content="Usage limits and rules designed to prevent abuse and ensure stable, fair access to SaaS and AI tools."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1>Fair Use Policy</h1>
