--- a/public/security.html
+++ b/public/security.html
@@ -3,11 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <title>Security Policy | MVP HOUSE LTD</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Security Policy outlining how MVP HOUSE LTD protects user data through encryption, access control, monitoring, backups, and infrastructure safeguards."
+      content="Details of encryption, hosting, infrastructure, incident response, backups, monitoring, and AI security controls."
     />
+    <link rel="canonical" href="https://mvphouse.app/security.html" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Security Policy" />
+    <meta
+      property="og:description"
+      content="Learn how MVP HOUSE LTD protects user data through advanced security practices."
+    />
+    <meta property="og:url" content="https://mvphouse.app/security.html" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Security Policy | MVP HOUSE LTD" />
+    <meta
+      name="twitter:description"
+      content="Learn how MVP HOUSE LTD protects user data through advanced security practices."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <h1>Security Policy</h1>
